--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "jmasl/kata-fizz-buzz",
+    "name": "jmasl/PHPUnit_testing",
     "authors": [
         {
             "name": "Jael Masllorens",
